--- a/MarklogicProject/Web.config
+++ b/MarklogicProject/Web.config
@@ -5,10 +5,10 @@
   -->
 <configuration>
   <appSettings>
-    <add key="host" value="ec2-18-184-154-255.eu-central-1.compute.amazonaws.com" />
+    <add key="host" value="localhost" />
     <add key="port" value="8000" />
-    <add key="username" value="admin" />
-    <add key="password" value="i-0098c2bcd215eafb2" />
+    <add key="username" value="ereskovsky" />
+    <add key="password" value="A22119933" />
     <add key="realm" value="public" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
